--- a/src/scss/base/_base-forms.scss
+++ b/src/scss/base/_base-forms.scss
@@ -9,102 +9,78 @@
  * For further information, please contact Curity AB.
  */
 
-/*-------------------------------------------------------------------
+/* -------------------------------------------------------------------
 Base fields
--------------------------------------------------------------------*/
+------------------------------------------------------------------- */
 // The .field-light class will use the standard basscss .field class.
 
 .field {
-  border-style: solid;
-  border-width: 1px;
-  border-color: rgba(0, 0, 0, 0.125);
-  border-radius: 3px;
-}
-
-.field:focus,
-.field.is-focused {
+  border-radius: var(--form-field-border-radius);
+  transition: box-shadow 200ms, border-color 200ms, background-color 200ms;
   outline: none;
-  border-color: #0074d9;
-  box-shadow: 0 0 0 1px rgba(lighten($primary, 20%), 0.5);
+  box-shadow: var(--form-field-box-shadow);
+  background-color: var(--form-field-background-color);
+  border-width: var(--form-field-border-width);
+  border-style: var(--form-field-border-style);
+  border-color: var(--form-field-border-color);
+  caret-color: var(--form-field-caret-color);
 }
 
-.field:disabled,
-.field.is-disabled {
-  background-color: rgba(0, 0, 0, 0.125);
-  opacity: 0.5;
+.field:hover {
+  border-color: var(--form-field-border-color-hover);
+}
+
+.field:focus {
+  border-color: var(--form-field-border-color-focus);
+  box-shadow: var(--form-field-box-shadow-focus);
+}
+
+.field:disabled {
+  background-color: var(--form-field-disabled-background-color);
+  opacity: var(--form-field-disabled-opacity);
 }
 
 .field[readonly]:not(select),
 .field.is-read-only {
-  background-color: rgba(0, 0, 0, 0.125);
-}
-
-.field[readonly]:not(select),
-.field.is-read-only {
-  background-color: rgba(0, 0, 0, 0.125);
-}
-
-.field.is-success {
-  border-color: #2ecc40;
-}
-
-.field.is-success:focus,
-.field.is-success.is-focused {
-  box-shadow: 0 0 0 1px rgba(46, 204, 64, 0.5);
-}
-
-.field.is-warning {
-  border-color: #ffdc00;
-}
-
-.field.is-warning:focus,
-.field.is-warning.is-focused {
-  box-shadow: 0 0 0 1px rgba(255, 220, 0, 0.5);
+  background-color: var(--form-field-readonly-background-color);
 }
 
 .field-light {
   @extend .field;
 }
 
+// Fields on dark background and transparent forms
+.body-dark .form-transparent .field {
+  color: white;
+  background-color: var(--form-field-background-color-dark);
+  border-color: var(--form-field-border-color-dark);
+}
+
 // Full width fields
+
 .full-width {
   width: 100%;
 }
 
-/*-------------------------------------------------------------------
-Focus color
--------------------------------------------------------------------*/
-.field-light:focus {
-  border-color: lighten($primary, 40%);
-}
-
-/*-------------------------------------------------------------------
+/* -------------------------------------------------------------------
 Error responses
--------------------------------------------------------------------*/
+------------------------------------------------------------------- */
+
 label.is-error {
-  color: $call-to-action-danger;
+  color: var(--color-danger);
 }
 
 // Label
+
 label {
-  color: #666;
-  line-height: 1;
-  font-size: 0.85rem;
-  font-family: "Roboto-Regular";
-
-  @media #{$breakpoint-md} {
-    line-height: 2;
-    font-size: 0.95rem;
-  }
+  display: inline-block;
+  color: var(--form-label-color);
+  font-family: var(--type-sans);
+  font-size: var(--form-label-font-size);
+  line-height: var(--form-label-line-height);
 }
 
-// Submit buttons
-button[type="submit"].button,
-input[type="submit"].button {
-  margin-top: 1rem;
-}
-
-// Form inout types
+// Form input types
 input[type="text"],
 input[type="datetime"],
 input[type="datetime-local"],
@@ -117,61 +93,71 @@ input[type="tel"],
 input[type="time"],
 input[type="url"],
 input[type="week"] {
-  height: $form-field-height;
-  padding: $form-field-padding;
-  font-size: $form-field-font-size;
-  color: $form-field-color;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-
-  &:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: lighten($primary, 40%);
-    outline: 0;
-  }
+  color: var(--color-primary);
+  font-size: var(--form-field-font-size);
+  height: var(--form-field-height);
+  padding-left: var(--form-field-padding);
+  padding-right: var(--form-field-padding);
+  transition: border-color ease-out 0.2s, box-shadow ease-out 0.2s;
 }
 
 // Form textarea
+
 textarea {
   color: #666;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 
   &:focus {
-    color: #495057;
     background-color: #fff;
-    border-color: $primary;
+    border-color: var(--color-primary);
+    color: var(--color-primary);
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba($primary, 0.25);
   }
 }
 
-/*-------------------------------------------------------------------
+// Submit buttons
+
+button[type="submit"].button,
+input[type="submit"].button {
+  margin-top: var(--space-1);
+}
+
+/* -------------------------------------------------------------------
 Nicer looking select boxes
--------------------------------------------------------------------*/
+------------------------------------------------------------------- */
+
 select {
-  height: 38px;
-  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
-  border: 1px solid #d1d1d1;
-  border-radius: 2px;
+  background-color: white;
+  border: 1px solid var(--form-field-border-color);
+  border-radius: var(--form-field-border-radius);
   box-shadow: none;
-  box-sizing: border-box;
+  height: var(--form-field-height);
+  padding-left: var(--form-field-padding);
+  padding-right: calc(var(--form-field-padding) * 2);
   width: 100%;
+  appearance: none;
+  print-color-adjust: exact;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 9l6 6 6-6'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.5rem center;
+  line-height: 1.2;
+  background-size: 1.5em 1.5em;
 }
 
-/*-------------------------------------------------------------------
+/* -------------------------------------------------------------------
 Fieldset
--------------------------------------------------------------------*/
+------------------------------------------------------------------- */
+
 fieldset {
-  padding: 2rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  margin-bottom: 2rem;
+  border: 1px solid var(--form-field-border-color);
+  border-radius: var(--form-field-border-radius);
+  margin-bottom: var(--space-2);
+  padding: var(--space-2);
 }
 
-/*-------------------------------------------------------------------
+/* -------------------------------------------------------------------
 Password revealer
--------------------------------------------------------------------*/
+------------------------------------------------------------------- */
+
 .form-password-reveal-form {
   position: relative;
 
@@ -181,24 +167,20 @@ Password revealer
 }
 
 .form-password-reveal-form-icon {
-  position: absolute;
-  top: 2.25rem;
-  right: 0.5rem;
-  opacity: 0.3;
-  background-image: url("#{$imagePath}eye.svg");
+  background-image: url("/../public/images/eye.svg");
   background-repeat: no-repeat;
   background-size: 100%;
-  display: inline-block;
-  vertical-align: middle;
-  transition: opacity 200ms ease;
+  background-size: 20px 20px;
   cursor: pointer;
-  width: 18px;
-  height: 18px;
-  background-size: 18px 18px;
-
-  @media #{$breakpoint-md} {
-    top: 2.5rem;
-  }
+  display: inline-block;
+  height: 20px;
+  opacity: 0.3;
+  position: absolute;
+  right: 0.5rem;
+  top: calc(var(--form-field-height) * 0.95);
+  transition: opacity 200ms ease;
+  vertical-align: middle;
+  width: 20px;
 
   &.active {
     opacity: 1;
@@ -206,8 +188,9 @@ Password revealer
 }
 
 // Placeholders
+
 ::placeholder {
-  color: $form-field-placeholder-color;
+  color: var(--form-field-placeholder-color);
 }
 
 // Form field
@@ -215,47 +198,130 @@ Password revealer
   position: relative;
 }
 
-// Form field readonly
-.field-light[readonly]:not(select),
-.field.is-read-only,
-.field[readonly]:not(select),
-.is-read-only.field-light {
-  background-color: transparent;
-  border-color: transparent;
-  text-align: center;
-  padding: 0;
-  @extend h1;
+.form-field input {
+  padding-left: var(--form-field-padding-left);
 }
 
 // Form field icons
+
 .form-field-icon {
-  position: absolute;
-  color: $form-field-icon-color;
-  top: 1.75rem;
+  display: var(--form-field-icon-display);
+  color: var(--form-field-icon-color);
+  font-size: var(--form-field-icon-size);
   left: 1rem;
-  font-size: 1.5rem;
+  position: absolute;
   transition: color 300ms;
-
-  @media #{$breakpoint-md} {
-    top: 2rem;
-  }
-}
-
-.form-field input:focus ~ .form-field-icon {
-  color: $form-field-icon-focus-color;
-}
-
-// Type
-.well-white h2,
-.well-white h3,
-.well-white h4,
-.well-white p {
-  color: initial;
+  top: calc(var(--form-field-height) * 0.725);
 }
 
 // Fieldset Legend
+
 legend {
   body.body-dark .form-transparent & {
     color: white;
   }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  appearance: textfield;
+}
+
+// Backup codes
+
+.backup-codes {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+
+  ul {
+    font-family: var(--type-mono);
+    font-size: 1rem;
+
+    @media #{$breakpoint-sm} {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      column-gap: 1rem;
+    }
+  }
+
+  li {
+    @media #{$breakpoint-sm} {
+      justify-self: center;
+    }
+
+    text-align: center;
+  }
+}
+
+.backup-codes code {
+  body.body-dark .form-transparent & {
+    color: white;
+  }
+}
+
+// Confirm
+
+.confirm {
+  @media #{$breakpoint-sm} {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+
+.confirm input[type="checkbox"] {
+  @media #{$breakpoint-sm} {
+    position: relative;
+    top: 0.5ex;
+  }
+}
+
+.confirm label {
+  line-height: 1.5;
+  margin-top: 0;
+}
+
+// Accent color
+input {
+  accent-color: var(--color-spot);
+}
+
+// Agree checkbox
+.login-links-forgot label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+// Bank id form needs to have correct white space
+// div.center placed immediately after form
+#bankid-form,
+form + div.center {
+  @extend .area;
+}
+
+// Center QR Code
+img#autostartTokenQr,
+img[alt*="barcode"] {
+  margin: 0 auto;
+}
+
+// Auto fill
+
+// Firefox 94 and newer
+input:autofill {
+  background: transparent;
+}
+
+// Chrome and Safari
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+input[data-autocompleted] {
+  background-color: transparent !important;
 }
