--- a/src/scss/base/_base-icons.scss
+++ b/src/scss/base/_base-icons.scss
@@ -1,26 +1,25 @@
-/// This file is for extending the icon used from Ionicons
+$imagePath: "/../public/images/";
 
-// Since Bankid doesn't exist in Ionicons we make our own
 .ionbaseicon {
   display: inline-block;
   font-family: Ionicons;
-  speak: none;
-  font-style: normal;
-  font-weight: 400;
-  font-variant: normal;
-  text-transform: none;
-  text-rendering: auto;
-  line-height: 1;
   -webkit-font-smoothing: antialiased;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 1;
+  speak: none;
+  text-rendering: auto;
+  text-transform: none;
 }
 
 .ion-bankid {
   background-image: url("#{$imagePath}bankid-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -28,11 +27,11 @@
 
 .ion-google {
   background-image: url("#{$imagePath}icon-google-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 45%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -40,11 +39,11 @@
 
 .ion-aws {
   background-image: url("#{$imagePath}aws-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -52,11 +51,11 @@
 
 .ion-salesforce {
   background-image: url("#{$imagePath}salesforce-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -64,11 +63,11 @@
 
 .ion-freja {
   background-image: url("#{$imagePath}freja-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -76,11 +75,11 @@
 
 .ion-cgi {
   background-image: url("#{$imagePath}cgi-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -88,11 +87,11 @@
 
 .ion-slack {
   background-image: url("#{$imagePath}slack-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -100,11 +99,11 @@
 
 .ion-bitbucket {
   background-image: url("#{$imagePath}bitbucket-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -112,59 +111,11 @@
 
 .ion-box {
   background-image: url("#{$imagePath}box-logo-white.svg");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
-    @extend .visuallyhidden;
-    @extend .ionbaseicon;
-  }
-}
-
-.ion-signicat {
-  //background-image: url("#{$imagePath}signicat-logo-white.svg");
-  //background-repeat: no-repeat;
-  //background-position: center center;
-  //background-size: 50%;
-  //
-  //&:before {
-  //  @extend .visuallyhidden;
-  //  @extend .ionbaseicon;
-  //}
-}
-
-.ion-stackexchange {
-  background-image: url("#{$imagePath}stackexchange-logo-white.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50%;
-
-  &:before {
-    @extend .visuallyhidden;
-    @extend .ionbaseicon;
-  }
-}
-
-.ion-criipto {
-  background-image: url("#{$imagePath}criipto-logo-white.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50%;
-
-  &:before {
-    @extend .visuallyhidden;
-    @extend .ionbaseicon;
-  }
-}
-
-.ion-bitbucket {
-  background-image: url("#{$imagePath}bitbucket-logo-white.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50%;
-
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -172,11 +123,59 @@
 
 .ion-signicat {
   background-image: url("#{$imagePath}signicat-logo-white.png");
-  background-repeat: no-repeat;
   background-position: center center;
+  background-repeat: no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
+    @extend .visuallyhidden;
+    @extend .ionbaseicon;
+  }
+}
+
+.ion-stackexchange {
+  background-image: url("#{$imagePath}stackexchange-logo-white.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+
+  &::before {
+    @extend .visuallyhidden;
+    @extend .ionbaseicon;
+  }
+}
+
+.ion-criipto {
+  background-image: url("#{$imagePath}criipto-logo-white.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+
+  &::before {
+    @extend .visuallyhidden;
+    @extend .ionbaseicon;
+  }
+}
+
+.ion-bitbucket {
+  background-image: url("#{$imagePath}bitbucket-logo-white.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+
+  &::before {
+    @extend .visuallyhidden;
+    @extend .ionbaseicon;
+  }
+}
+
+.ion-signicat {
+  background-image: url("#{$imagePath}signicat-logo-white.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -186,7 +185,7 @@
   background: url("#{$imagePath}openid-logo-white.svg") 50% 50% no-repeat;
   background-size: 50%;
 
-  &:before {
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
@@ -196,7 +195,17 @@
   background: url("#{$imagePath}duo-logo-white.svg") 50% 50% no-repeat;
   background-size: 60%;
 
-  &:before {
+  &::before {
+    @extend .visuallyhidden;
+    @extend .ionbaseicon;
+  }
+}
+
+.ion-netidaccess-os {
+  background: url("#{$imagePath}netidaccess-os-logo.svg") 50% 50% no-repeat;
+  background-size: 40%;
+
+  &::before {
     @extend .visuallyhidden;
     @extend .ionbaseicon;
   }
