--- a/src/scss/base/_base-type.scss
+++ b/src/scss/base/_base-type.scss
@@ -9,51 +9,43 @@
  * For further information, please contact Curity AB.
  */
 
-strong, b {
-    font-weight: normal;
-    font-family: 'Roboto-Medium';
-    color: $strong-color;
+strong,
+b {
+  color: currentcolor;
+  font-family: var(--type-sans-bold);
+  font-weight: var(--type-weight-bold);
 }
 
-i, em, blockquote {
-    font-style: italic;
+i,
+em,
+blockquote {
+  font-style: italic;
 }
-
 
 html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    background: rgb(255,255,255);
-    overflow-y: scroll;
+  background: rgb(255 255 255);
+  overflow-y: scroll;
+  text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 /*
 SELECTIONS
 --------------------------------------------- */
 
-::-moz-selection {
-    background: #2F4461;
-    color: rgb(255,255,255);
-    text-shadow: none;
-}
-
 ::selection {
-    background: #2F4461;
-    color: rgb(255,255,255);
-    text-shadow: none;
+  background: var(--color-primary-light);
+  color: rgb(255 255 255);
+  text-shadow: none;
 }
 
 ::selection:window-inactive {
-    background: #2F4461;
-    color: rgb(50,50,50);
+  background: var(--color-primary-light);
+  color: rgb(50 50 50);
 }
 
 img::selection {
-    background: transparent;
-}
-
-img::-moz-selection {
-    background: transparent;
+  background: transparent;
 }
 
 /*
@@ -66,98 +58,155 @@ h3,
 h4,
 h5,
 h6 {
-    text-rendering: optimizeLegibility;
-    font-weight: normal;
-    font-family: "Roboto-Regular";
-    color: $heading-color;
+  color: var(--color-heading);
+  font-family: var(--type-sans);
+  font-weight: var(--type-weight);
+  text-rendering: optimizelegibility;
+  margin-top: var(--space-2);
+  margin-bottom: var(--space-2);
+  line-height: calc(var(--type-line-height) * 0.75);
 }
 
 h1 {
-    font-size: 2rem;
-    @media #{$breakpoint-lg} {
-        font-size: 3rem;
-    }
+  font-size: calc(var(--type-base-size) * 2);
+
+  @media #{$breakpoint-lg} {
+    font-size: calc(var(--type-base-size) * 3);
+  }
 }
 
 h2 {
-    font-size: 1.5rem;
-    @media #{$breakpoint-lg} {
-        font-size: 1.75rem;
-    }
+    font-size: calc(var(--type-base-size) * 1.5);
+
+  @media #{$breakpoint-lg} {
+    font-size: calc(var(--type-base-size) * 1.75);
+  }
 }
 
 p {
-    font-weight: 300;
-    font-size: .95rem;
-    line-height: 1.5;
-    color: $paragraph-color;
+  color: var(--color-text);
+  font-family: var(--type-sans);
+  font-weight: var(--type-weight);
+  line-height: 1.5;
+  line-height: calc(var(--type-line-height));
+  margin-top: var(--space-2);
+  margin-bottom: var(--space-2);
 }
 
 abbr {
-    text-transform: lowercase;
-    font-variant: small-caps;
-    letter-spacing: 0.1em;
-    cursor: help;
+  cursor: help;
+  font-variant: small-caps;
+  letter-spacing: 0.1em;
+  text-transform: lowercase;
 }
 
-sub, sup {
-    vertical-align: baseline;
-    position: relative;
-    font-size: 65%;
-    line-height: 0;
+sub,
+sup {
+  font-size: 65%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
-    bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 sup {
-    top: -0.5em;
+  top: -0.5em;
 }
 
 blockquote {
-    margin: 2.5em 0 2.5em 1.80203em;
-    color: rgb(90,90,90);
-    position: relative;
-    font-style: normal;
+  color: rgb(90 90 90);
+  font-style: normal;
+  margin: 2.5em 0 2.5em 1.80203em;
+  position: relative;
 }
 
-ul, ol {
-    margin-left: 0;
+dl,
+ol,
+ul {
+  margin-top: var(--space-2);
+  margin-bottom: var(--space-2);
+}
+
+ul,
+ol {
+  margin-left: 0;
 }
 
 ul {
-    list-style-type: disc;
-    color: $paragraph-color;
+  color: var(--color-text);
+  list-style-type: disc;
 }
 
 ol {
-    list-style-type: lower-roman;
+  list-style-type: lower-roman;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
+// Code
 pre {
-    white-space: pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -pre-wrap;
-    white-space: -o-pre-wrap;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    overflow-x: auto;
-    text-align: left;
-    border-radius: 2px;
-    background-color: #fafafa;
-    border: 1px solid #eee;
-    padding: .5rem 1rem;
-    font-size: 1rem;
-    font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
+  background-color: #fafafa;
+  border: 1px solid #eee;
+  border-radius: 2px;
+  font-family: var(--type-mono);
+  font-size: 1rem;
+  overflow-wrap: break-word;
+  overflow-x: auto;
+  padding: 0.5rem 1rem;
+  text-align: left;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 pre code {
-    white-space: pre-wrap;
-    overflow-x: auto;
-    word-break: break-all;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-break: break-all;
+}
+
+.detailed-error code {
+  padding: 0.15em 0.2em 0.05em;
+  word-break: break-word;
+  white-space: normal;
+  border: 1px solid rgb(0 0 0 / 5%);
+  background-color: #f7fafc;
+  border-radius: 4px;
+  margin-left: 0.25rem;
+}
+
+.detailed-error-message.expanded {
+  max-width: initial;
+  margin-left: calc(50% - 45vw);
+  width: 90vw;
+  padding: 1.5rem;
+  border-width: var(--well-border-width);
+  border-style: var(--well-border-style);
+  border-color: var(--well-border-color);
+  border-radius: calc(var(--well-border-radius) / 2);
+  box-shadow: var(--well-box-shadow);
+  @media #{$breakpoint-sm} {
+    margin-left: calc(50% - 30vw);
+    width: 60vw;
+  }
+}
+
+// Or divider
+.or {
+  align-items: center;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: minmax(20px, 1fr) auto minmax(20px, 1fr);
+  text-align: center;
+  width: 100%;
+}
+
+.or::before,
+.or::after {
+  border-top: 1px solid #ccc;
+  content: "";
 }
