--- a/src/scss/modules/login/_login-base.scss
+++ b/src/scss/modules/login/_login-base.scss
@@ -9,38 +9,41 @@
  * For further information, please contact Curity AB.
  */
 
-/*-------------------------------------------------------------------
+/* -------------------------------------------------------------------
 Login intro
--------------------------------------------------------------------*/
-.login-intro {
-  background: darken($primary, 8%);
-  color: white;
-  padding: 0.1rem;
-}
-
+------------------------------------------------------------------- */
 // Logotype
 .login-logo {
-  max-width: 200px;
+  max-width: var(--login-logo-max-width);
   margin: 0 auto;
-  display: block;
+  display: var(--login-logo-display);
   margin-top: 1.5rem;
   margin-bottom: 0;
-  max-height: 40px;
+  max-height: var(--login-logo-max-height);
+  width: auto;
+  height: auto;
+  object-fit: contain;
 }
 
-/*-------------------------------------------------------------------
-Login help
--------------------------------------------------------------------*/
-.login-help {
-  font-size: 0.8rem;
-  i {
-    vertical-align: middle;
-    display: inline-block;
+// If logo placement is set to be outside the well
+.body-logo-outside main .login-logo {
+  @media #{$breakpoint-sm} {
+    margin-top: 5rem;
   }
-  a {
-    color: $grey;
-    &:hover {
-      color: $primary;
-    }
+}
+
+// Forgot password links
+.login-actions {
+
+  padding-top: var(--space-1);
+  padding-bottom: var(--space-1);
+}
+
+.login-actions a {
+  display: block;
+  font-size: 0.85rem;
+  padding: calc(var(--space-1) / 1.5);
+  &:hover {
+    text-decoration: underline;
   }
 }
