--- a/src/scss/modules/login/_login-chooser.scss
+++ b/src/scss/modules/login/_login-chooser.scss
@@ -10,81 +10,131 @@
  */
 
 .login-chooser {
-	display: flex;
-	justify-content: space-between;
-	align-content: center;
-	flex-direction: column;
-	margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: column;
+  margin-top: 1rem;
 }
 
 .login-chooser-item,
 a.login-chooser-item {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	box-shadow: 0 1px 1px -1px #ddd;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: var(--form-field-border-radius);
+  transition: box-shadow 200ms, border-color 200ms, background-color 200ms;
 
-	&.login-chooser-item-selected {
-		pointer-events: none;
-	}
+  &.login-chooser-item-selected {
+    pointer-events: none;
+  }
 
-	body.body-dark .form-transparent & {
-		box-shadow: none;
-	}
+  body.body-dark .form-transparent & {
+    box-shadow: none;
+  }
 
+  :focus {
+    box-shadow: var(--form-field-box-shadow-focus);
+  }
 
-	&:active,
-	&:focus,
-	&:hover {
-		color: white;
-		text-decoration: none;
-		background-color: lighten($primary, 15%);
+  &:active,
+  &:focus,
+  &:hover {
+    color: white;
+    text-decoration: none;
+    background-color: var(--color-primary-dark);
 
-		.icon {
-			background-color: lighten($primary, 5%);
-			color: white;
+    .icon {
+      background-color: var(--color-primary);
+      color: white;
+    }
 
-		}
-		p {
-			color: white;
-		}
-	}
+    p {
+      color: white;
+    }
+  }
 
-	&:focus {
-		outline: none;
-		border-color: rgba(lighten($primary, 20%), 0.5);
-		box-shadow: 0 0 0 3px rgba(lighten($primary, 20%), 0.5);
-	}
-
+  &:focus {
+    outline: none;
+  }
 }
 
 .login-chooser-item .icon {
-	width: 100px;
-	height: 80px;
-	font-size: 3rem;
-	color: $primary;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex: 1 0 30%;
+  width: 100px;
+  height: 80px;
+  font-size: 3rem;
+  color: var(--color-primary);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 30%;
+  border-top-left-radius: var(--form-field-border-radius);
+  border-bottom-left-radius: var(--form-field-border-radius);
 
-
-	@media #{$breakpoint-md} {
-		font-size: 4rem;
-		width: 100px;
-		height: 90px;
-	}
+  @media #{$breakpoint-md} {
+    font-size: 4rem;
+    width: 100px;
+    height: 90px;
+  }
 }
 
 .login-chooser-item p {
-	flex: 1 0 70%;
-	margin: 0;
-	text-align: left;
-	font-size: .9rem;
-	padding: 1rem;
+  flex: 1 0 70%;
+  margin: 0;
+  text-align: left;
+  font-size: 0.9rem;
+  padding: 1rem;
 
-	@media #{$breakpoint-sm} {
-		font-size: 1.15rem;
-	}
+  @media #{$breakpoint-sm} {
+    font-size: 1.15rem;
+  }
+}
+
+/* WebAuthn */
+
+.login-chooser-webauthn figure {
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
+  margin-right: 1rem;
+  border-radius: 50%;
+  background-color: white;
+  width: 90px;
+  height: 90px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  align-self: center;
+}
+
+.login-chooser-webauthn img {
+  display: block;
+  width: auto;
+  object-fit: contain;
+  height: 60px;
+  width: 60px;
+}
+
+.login-chooser-webauthn button[type="submit"].button {
+  margin-top: 0;
+}
+
+.login-chooser-webauthn button.login-chooser-item,
+.login-chooser-webauthn a.login-chooser-item,
+.login-chooser-webauthn .login-chooser-item {
+  &:focus,
+  &:active,
+  &:hover {
+    color: white;
+    text-decoration: none;
+    background-color: var(--color-primary-dark);
+
+    strong {
+      color: white;
+    }
+  }
 }
