--- a/src/scss/base/_base-utility.scss
+++ b/src/scss/base/_base-utility.scss
@@ -10,70 +10,46 @@
  */
 
 .inlineicon {
-	margin-right: .5rem;
-	vertical-align: middle;
-	display: inline-block;
-}
-
-.rcol-center {
-	float: left;
-
-	@media #{$breakpoint-sm} {
-		float: none;
-	}
-}
-
-.table {
-	display: table;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-}
-
-.table-cell {
-	display: table-cell;
-	vertical-align: middle;
+  display: inline-block;
+  margin-right: 0.5rem;
+  vertical-align: middle;
 }
 
 .visuallyhidden {
-	position: absolute !important;
-	height: 1px;
-	width: 1px;
-	overflow: hidden;
-	clip: rect(1px 1px 1px 1px);
-	clip: rect(1px, 1px, 1px, 1px);
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  width: 1px;
 }
 
 .recipient span {
-	display: inline-block;
-	border-radius: 2px;
-	background-color: #fafafa;
-	border: 1px solid #eee;
-	padding: .25rem .55rem;
-	font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
-	margin-top: 1rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.15rem;
+  align-items: center;
+  display: inline-block;
+  display: flex;
+  font-family: var(--type-mono);
+  font-size: 1.15rem;
+  justify-content: center;
+  margin-top: 1rem;
+  padding: 0.25rem 0.55rem;
 
-	body.body-dark .form-transparent & {
-		background-color: transparent;
-		border: 1px solid $primary;
-	}
-
+  body.body-dark .form-transparent & {
+    background-color: transparent;
+    border: 1px solid var(--color-primary);
+  }
 }
 
-.recipient span:before {
-	font-family: 'Ionicons';
-	font-size: 1.75rem;
-	margin-right: 1rem;
+.recipient span::before {
+  font-family: Ionicons;
+  font-size: 1.75rem;
+  margin-right: 1rem;
 }
 
-.recipient-phone span:before {
-	content: '\f1fa';
+.recipient-phone span::before {
+  content: "\f1fa";
 }
 
-.recipient-email span:before {
-	content: '\f422';
+.recipient-email span::before {
+  content: "\f422";
 }
