--- a/src/scss/modules/consent/_module-consent.scss
+++ b/src/scss/modules/consent/_module-consent.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem;
 }
 
 .logo-consent-logo {
@@ -14,8 +14,8 @@
   position: relative;
   z-index: 10;
 
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     content: "";
     position: absolute;
     width: 80%;
@@ -25,11 +25,11 @@
     top: 48%;
   }
 
-  &:before {
+  &::before {
     left: -40%;
   }
 
-  &:after {
+  &::after {
     left: auto;
     right: -40%;
   }
@@ -61,7 +61,7 @@
 }
 
 .logo-consent .icon {
-  color: $call-to-action-success;
+  color: var(--color-success);
   font-size: 2.5rem;
   z-index: 2;
 }
@@ -88,7 +88,7 @@
 
 .login-logo-client-default {
   display: block;
-  background-image: url("#{$imagePath}cube.svg");
+  background-image: url("/../public/images/cube.svg");
   background-repeat: no-repeat;
   background-size: 100%;
   width: 40px;
@@ -106,21 +106,22 @@
 }
 
 .consent-entries-list {
-  li:nth-child(1n + 6) {
+  li:nth-child(1n+6) {
     display: none;
   }
 
-  li:nth-child(1n + 6) input:checked:before {
+  li:nth-child(1n+6) input:checked::before {
     display: none;
   }
 
   &.is-active {
-    li:nth-child(1n + 6) {
+    li:nth-child(1n+6) {
       display: block;
     }
+
     border-bottom: none;
 
-    li input:checked:before {
+    li input:checked::before {
       display: inline-block;
     }
   }
@@ -130,6 +131,7 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-right: 1rem;
+
   @media #{$breakpoint-sm} {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
@@ -150,10 +152,10 @@
   padding: 0;
 }
 
-.consent-entries-list li label.consent-entries-list-checkbox:before {
+.consent-entries-list li label.consent-entries-list-checkbox::before {
   font-family: "Ionicons";
   content: "\f120";
-  color: $call-to-action-success;
+  color: var(--color-success);
   vertical-align: middle;
 }
 
